--- a/FS005-Fashion Ecommerce Full Website/css/style.css
+++ b/FS005-Fashion Ecommerce Full Website/css/style.css
@@ -110,3 +110,245 @@ header{
     font-size: 0.6em;
     font-weight: 400;
 }
+
+/* Banner Section */
+#banner{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 0 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+}
+
+/* Make the Shade for the images */
+.women::before,
+.men::before,
+.special::before{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,0.3);
+    z-index: 100;
+    transition: 0.5s;
+}
+
+/* Remove the shade on Hover */
+.women:hover::before,
+.men:hover::before,
+.special:hover::before{
+    background: transparent;
+}
+
+.women{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 40%;
+    clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+    background: var(--primary);
+    transition: 1s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.men{
+    position: absolute;
+    top: 0;
+    left: 30%;
+    height: 100%;
+    width: 40%;
+    clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 0 100%, 25% 50%, 0 0);
+    background: var(--second);
+    transition: 1s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.special{
+    position: absolute;
+    top: 0;
+    left: 60%;
+    height: 100%;
+    width: 40%;
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+    background: var(--primary);
+    transition: 1s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#banner.left .women,
+#banner.middle .men,
+#banner.right .special{
+    width: 100%;
+    clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 0% 100%, 0% 50%, 0% 0%);
+    transition: 1s;
+}
+
+#banner.right .special{
+    left: 0;
+}
+
+#banner.middle .men{
+    left: 0;
+}
+
+#banner.left .men,
+#banner.left .special{
+    left: 120%;
+}
+
+#banner.right .men,
+#banner.right .women{
+    left: -120%;
+}
+
+#banner.middle .women,
+#banner.middle .special{
+    left: -120%;
+}
+
+/* Banner Images */
+.women img,
+.men img,
+.special img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: 0.5s;
+}
+
+#banner.left .women img{
+    width: 50%;
+}
+
+#banner.middle .men img,
+#banner.right .special img{
+    left: 50%;
+    width: 50%;
+}
+
+/* Banner Switch Button */
+.switch-btn{
+    position: relative;
+    text-decoration: none;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 5em;
+    font-weight: 300;
+    margin-top: 40%;
+    z-index: 1000;
+    transition: 0.5s;
+    transform: scale(1);
+}
+
+.switch-btn:hover{
+    transform: scale(1.2);
+}
+
+/* Banner reset button */
+.reset{
+    position: absolute;
+    left: 100px;
+    bottom: 100px;
+    z-index: 1000;
+    transition: 0.5s;
+}
+
+.reset.active{
+    transform: rotateZ(180deg);
+}
+
+.reset ion-icon{
+    color: #ffffff;
+    font-size: 3em;
+    transition: 0.3s;
+}
+
+.reset ion-icon:hover{
+    color: var(--primary);
+}
+
+/* Banner content */
+#banner .content{
+    position: absolute;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+    z-index: 900;
+}
+
+#banner .content h1{
+    color: #ffffff;
+    font-size: 4.5em;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+#banner .content p{
+    color: #ffffff;
+    font-weight: 200;
+    font-size: 1em;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+}
+
+#banner .content a{
+    position: relative;
+    width: 200px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 400;
+    color: #ffffff;
+    padding: 12px 20px;
+    border: 1px solid #ffffff;
+    transition: 0.3s;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#banner .content a ion-icon{
+    font-size: 1.2em;
+}
+
+#banner .content a:hover{
+    background: #ffffff;
+    color: var(--primary);
+}
+
+#banner.left .women .content,
+#banner.middle .men .content,
+#banner.right .special .content{
+    opacity: 1;
+    visibility: visible;
+}
+
+.women .content{
+    left: 55%;
+}
+
+.men .content,
+.special .content{
+    left: 100px;
+}
