--- a/FS008-Sports Car Website/css/style.css
+++ b/FS008-Sports Car Website/css/style.css
@@ -418,3 +418,30 @@ header .menu.active{
 .sci li a:hover{
     color: var(--primary);
 }
+
+/* Video play and pause button */
+.banner .play,
+.banner .pause{
+    display: none;
+    position: absolute;
+    left: 70%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--primary);
+    font-size: 8em;
+    cursor: pointer;
+    z-index: 100;
+    opacity: 0.3;
+    transition: 0.3s;
+}
+
+.banner .play:hover,
+.banner .pause:hover{
+    color: #ffffff;
+    opacity: 1;
+}
+
+.banner .play.active,
+.banner .pause.active{
+    display: block;
+}
